examples/test/testpolicy9898.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9898
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key15: value10
      key4: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value23
      podSelector:
        matchLabels:
          key31: value14
          key8: value4
          key3: value29
